static/less/base.less
/* ... */
#profile-content-rank-title {
    margin-top: 2em;

    & > * {
        font-size: 1.5em;
    }
}

#profile-content-rank-progression {
    margin-top: 0.5em;

    .progression-bar-outer {
        margin: 0 auto; 
        width: 16em;
    }

    .progression-bar {
        height: 0.5em;
        border: 1px solid #ccc; 
        overflow: hidden;

        & > * {
            background: #fff;
        }
    }

    .progression-bar-info {
        .clearfix(); 
        .floatfix();
        font-size: 0.9em; 
        margin-top: 0.25em;

        & > .left {
            float: left;
        }
        & > .right {
            float: right;
        }
    }
}

.loadout-cell:extend(.profile-table-cell){
    width: 45% !important;
    font-size: 0.4em !important;
    white-space: nowrap;
    padding: 0 0.5em;

    .swat-loadout-picture {
        margin-right: 0.25em;
    }
}

#profile-score-block {
    width: 30%;
    .center();

    & > .inner {
        .nowrap();
        width: 70%;
        margin: 0 auto;

        & > * {
            margin-bottom: 0.75em;
        }

        .score {
            font-size: 2.5em;
            line-height: normal;
        }
    }
}

#profile-chart-block {
    vertical-align: middle;
    .center();
    .nowrap();
}

#profile-record-block {
    .float();

    & > * {
        float: left;
        text-align: center;
        width: 25%;
        vertical-align: top;
        margin-bottom: 1em;
    }

    .score {
        margin-top: 0.5em;
    }
}

.profile-record-weapon {
    .picture {
        font-size: 1em;
    }
}

.profile-record-game {
    .picture {
        height: 5em;
    }
    .swat-game-frame-light {
        font-size: 2em; 
    }
}

.profile-gauge-container {
    margin: 0 0.5em;
    display: inline-block; 

    canvas {
        width: 12em; 
    }

    .score {
        font-size: 1.5em;
    }
}

.profile-stats-block {
    float: left;
    width: 25%;
    padding-left: 2em;
    .border-box();

    &.first, &:first-child {
        padding-left: 0 !important;
    }
}

.profile-stats-block-coop:extend(.profile-stats-block all) {
    width: 33%;
}

.profile-rank-block:extend(.profile-stats-block) {
    width: 50% !important;
    padding-left: 1em;

    &.odd {
        padding-right: 1em;
        padding-left: 0 !important;
    }
}

.profile-table:extend(.swat-table all){
    width: 100%;
    margin-bottom: 1em;
}

.profile-weapon-table:extend(.profile-table all) {
    @size: 3em;

    .weapon-picture {
        height: @size;
        background-size: auto @size;
        background-repeat: no-repeat;
        background-position: 0.5em center;
    }

    .weapon-title {
        padding-left: @size*2 + 1em;
    }
}

.profile-equipment-table:extend(.profile-weapon-table all) {
    @size: 3em;

    .weapon-title {
        padding-left: @size + 1em;
    }
}

.profile-fav-loadout-row {
    .width100();
    .clearfix();
    .floatfix();
    margin-bottom: 1em;
}

.profile-fav-loadout-row > *{
    float: left;
    margin-right: 1em;
}

.profile-map-table:extend(.profile-table all) {
    @size: 3.5em;

    .picture-cell {
        .left();
        background-size: auto @size;
        background-position: 0.5em center;
        background-repeat: no-repeat;
        height: @size;

        .title {
            padding-left: @size + 0.75em;
            .nowrap();
        }
    }
}

.swat-loadout-picture {
    display: inline-block;

    img {
        height: 7em;
        width: auto;
    }
}

#profile-title {
    position: relative; 

    & > .details {
        height: 5em;
        width: 100%;
        margin-left: 0.5em; 
        position: absolute; 
        top: 0; 
        left: 5em;

        .name {
            font-size: 1.8em; 
            line-height: 0.75em;
        }
        .award {
            background: url(../images/css/pict_star.png) no-repeat left center;
            background-size: 0.9em auto;
            margin-top: 0.15em;
            padding-left: 1.1em;
            & > a {
                .swat-yellow();
                font-size: 0.9em;
            }
        }
    }
}

#profile-tab-bar {
    position: relative;
    width: 70%;
}

#profile-pane-content {
    width: 70%; 
    position: relative;
}

#profile-pane-activity {
    width: 30%; 
    position: relative;
}

#profile-pane-activity-inner {
    margin-left: 1em;
}

.profile-recent-game-title {
    margin-bottom: 0.5em;
}

.profile-recent-game-list {
    margin-bottom: 1em;

    a {
        margin-right: 0.3em;
        margin-bottom: 0.3em;
    }
}

.year-range:extend(.swat-page-range all) {
    position: absolute; 
    bottom: 0;

    &.right {
        right: 0; 
    }

    &.left {
        left: 0; 
    }
}

#server-list-button-bar {
    position: absolute; 
    text-align: right;
    width: 100%;
    bottom: 0.25em;
}

.swat-server-table {
    height: 90%;
    overflow: auto;
    border-top: 2px solid #666;
    border-bottom: 2px solid #fff;

    & > .inner {
        &:extend(.swat-team-table all);
        font-size: 0.9em;
        height: 100%;
        width: 100%;
        .border-box();

        .table-header > * {
            .center();
        }
        .table-row > * {
            .nowrap();
            text-align: left;
            padding: 0.15em 0.3em;
        }
        .table-row-empty > * {
            width: 0;
        }
    }
}

.swat-status-text {
    font-size: 0.9em;
}

.server-cell-passworded {
    width: 2.5%;
}

.server-cell-locked:extend(.server-cell-passworded) {
    background: url(../images/css/pict_locked.png) no-repeat center center;
    background-size: 1em auto;
}

.server-cell-hostname {
    width: 25%;
}

.server-cell-players {
    width: 5%;
}

.server-cell-gametype {
    width: 15%;
}

.server-cell-mapname {
    width: 25%;
}

.server-cell-ip {
    width: 15%;
}

.server-cell-gamename {
    width: 7.5%;
}

.server-cell-gamever {
    width: 5%;
}

.server-cell-location {
    width: 2.5%;
    text-align: center;
}
/* ... */

